# python-project-49

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: README.md
brain_games/: CONST.py  cli.py  const.py  engine.py  utils.py
brain_games/games/: calc.py  even.py  gcd.py  nod.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_nod.py  brain_prime.py  brain_progression.py
